--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li>Analytical Skills</li>
         <li>Easily Adaptable</li>
     </ul>
+    <button onclick="window.print()">Print Resume to PDF</button>
 </body>
 <footer>Resume Crafted with HTML by Edjenson V. Protacio</footer>
 </html>
