--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             .button {
                 display: none;
             }
+            .footer {
+                display: none;
+            }
         }
         .img {
             max-width: 25%;
@@ -54,5 +57,5 @@
     </ul>
     <button class="button" onclick="window.print()">Print Resume to PDF</button>
 </body>
-<footer>Resume Crafted with HTML by Edjenson V. Protacio</footer>
+<footer class="footer">Resume Crafted with HTML by Edjenson V. Protacio</footer>
 </html>
