--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>My Resume</title>
+    <title>Edjenson Protacio's Online Resume</title>
     <style>
         @media print {
             .button {
