--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <style>
         @media print {
             .button {
-                display: none;
+                display:none;
             }
             .footer {
                 display: none;
             }
+            .grouped {
+                display: none;
+            } 
         }
         .img {
             max-width: 25%;
@@ -20,7 +23,7 @@
 <body>
     <img class="img" src="EdjensonPicture.png">
     <h1>Edjenson V. Protacio's Online Resume</h1>
-    <p><a href="mailto:protacio.edjenson@gmail.com">protacio.edjenson@gmail.com</a> | <a href="tel:+639761054132">(+63)9761054132</a> | <a href="https://www.linkedin.com/in/edjenson-protacio/">LinkedIn</a> | <a href="https://mahesvarashiva.github.io/html-portfolio/">My online portfolio</a></p>
+    <p><a href="mailto:protacio.edjenson@gmail.com">protacio.edjenson@gmail.com</a> | <a href="tel:+639761054132">(+63)9761054132</a> <p class="grouped"><a href="https://www.linkedin.com/in/edjenson-protacio/">LinkedIn</a> | <a href="https://mahesvarashiva.github.io/html-portfolio/">My online portfolio</a></p></p>
     <hr>
     <h2>Summary</h2>
         <ul>
